[gd_scene load_steps=8 format=3 uid="uid://daitxuverbyw1"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_76xcb"]
[ext_resource type="FontFile" uid="uid://cduik3tm0bac8" path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/architect-s-daughter/ArchitectsDaughter32.tres" id="1_ruj38"]
[ext_resource type="Texture2D" uid="uid://cwicngf137om5" path="res://art/props_itens/potion_green.png" id="2_b06x7"]
[ext_resource type="Texture2D" uid="uid://t04wu085rhli" path="res://art/props_itens/potion_red.png" id="3_babbr"]
[ext_resource type="Texture2D" uid="uid://b8aqr6ba3md3n" path="res://art/props_itens/potion_yellow.png" id="4_n28o7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0a3mq"]
bg_color = Color(0.487662, 0.487662, 0.487662, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0823529, 0.329412, 0.552941, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyhgv"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_76xcb")

[node name="Background" type="Panel" parent="."]
offset_left = 376.0
offset_top = 704.0
offset_right = 616.0
offset_bottom = 840.0
scale = Vector2(5, 5)
theme_override_styles/panel = SubResource("StyleBoxFlat_0a3mq")

[node name="Speed Potion" type="Panel" parent="Background"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nyhgv")

[node name="SpeedButton" type="Button" parent="Background/Speed Potion"]
layout_mode = 0
offset_left = -5.0
offset_top = 56.0
offset_right = 51.0
offset_bottom = 87.0
text = "Speed"

[node name="Description" type="Label" parent="Background/Speed Potion"]
layout_mode = 0
offset_left = -11.2
offset_top = 94.4
offset_right = 60.8
offset_bottom = 133.4
theme_override_fonts/font = ExtResource("1_ruj38")
theme_override_font_sizes/font_size = 8
text = "Increase speed
Cost: 5 coins"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PotionGreen" type="Sprite2D" parent="Background/Speed Potion"]
position = Vector2(25.6, 27.2)
scale = Vector2(3.8, 3.5)
texture = ExtResource("2_b06x7")

[node name="Health Potion" type="Panel" parent="Background"]
layout_mode = 0
offset_left = 96.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nyhgv")

[node name="HealthButton" type="Button" parent="Background/Health Potion"]
layout_mode = 0
offset_left = -8.0
offset_top = 56.0
offset_right = 52.0
offset_bottom = 87.0
text = "Health"
icon_alignment = 1

[node name="Description" type="Label" parent="Background/Health Potion"]
layout_mode = 0
offset_left = -14.4
offset_top = 94.4
offset_right = 60.6
offset_bottom = 133.4
theme_override_fonts/font = ExtResource("1_ruj38")
theme_override_font_sizes/font_size = 8
text = "Increase health
Cost: 25 coins"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PotionRed" type="Sprite2D" parent="Background/Health Potion"]
position = Vector2(25.6, 27.2)
scale = Vector2(3.8, 3.5)
texture = ExtResource("3_babbr")

[node name="Power Potion" type="Panel" parent="Background"]
layout_mode = 0
offset_left = 168.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nyhgv")

[node name="DamageButton" type="Button" parent="Background/Power Potion"]
layout_mode = 0
offset_left = -8.0
offset_top = 56.0
offset_right = 64.0
offset_bottom = 87.0
text = "Power"

[node name="Description" type="Label" parent="Background/Power Potion"]
layout_mode = 0
offset_left = -19.2
offset_top = 92.8
offset_right = 68.8
offset_bottom = 131.8
theme_override_fonts/font = ExtResource("1_ruj38")
theme_override_font_sizes/font_size = 8
text = "Increase power
Cost: 50 coins"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PotionYellow" type="Sprite2D" parent="Background/Power Potion"]
position = Vector2(25.6, 27.2)
scale = Vector2(3.8, 3.5)
texture = ExtResource("4_n28o7")

[node name="Close" type="Button" parent="Background"]
layout_mode = 0
offset_left = 243.2
offset_right = 272.2
offset_bottom = 31.0
text = "X"

[connection signal="pressed" from="Background/Speed Potion/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="Background/Health Potion/HealthButton" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="Background/Power Potion/DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="Background/Close" to="." method="_on_close_pressed"]
